// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeDepsValue * 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "*",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@*",
  "rawSpec": "*",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue * 2`] = `"*"`;

exports[`normalizeDepsValue . 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "G:\\Users\\The Project\\nodejs-yarn\\ws-yarn-workspaces2\\packages\\@yarn-tool\\normalize-deps-value",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@.",
  "rawSpec": ".",
  "registry": undefined,
  "saveSpec": "file:",
  "scope": "@fake",
  "type": "directory",
  "where": "G:\\Users\\The Project\\nodejs-yarn\\ws-yarn-workspaces2\\packages\\@yarn-tool\\normalize-deps-value",
}
`;

exports[`normalizeDepsValue . 2`] = `"."`;

exports[`normalizeDepsValue >x 2.x || * || <x || ~1.2.3beta ^4.0.0-dev.20200615 && 4.0.0-dev.20200615 < 4.0.0-dev.20200800 || 4.0.x - 4.0.2 || (4.0.x - 4.0.2) || >= 1 || =1 || ~> 2.0.0 || 1.2.3 - 1.2.4 - 1.2.5 || >=1.2.3 <=1.2.4 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": ">x 2.x || * || <x || ~1.2.3beta ^4.0.0-dev.20200615 && 4.0.0-dev.20200615 < 4.0.0-dev.20200800 || 4.0.x - 4.0.2 || (4.0.x - 4.0.2) || >= 1 || =1 || ~> 2.0.0 || 1.2.3 - 1.2.4 - 1.2.5 || >=1.2.3 <=1.2.4",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@>x 2.x || * || <x || ~1.2.3beta ^4.0.0-dev.20200615 && 4.0.0-dev.20200615 < 4.0.0-dev.20200800 || 4.0.x - 4.0.2 || (4.0.x - 4.0.2) || >= 1 || =1 || ~> 2.0.0 || 1.2.3 - 1.2.4 - 1.2.5 || >=1.2.3 <=1.2.4",
  "rawSpec": ">x 2.x || * || <x || ~1.2.3beta ^4.0.0-dev.20200615 && 4.0.0-dev.20200615 < 4.0.0-dev.20200800 || 4.0.x - 4.0.2 || (4.0.x - 4.0.2) || >= 1 || =1 || ~> 2.0.0 || 1.2.3 - 1.2.4 - 1.2.5 || >=1.2.3 <=1.2.4",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue >x 2.x || * || <x || ~1.2.3beta ^4.0.0-dev.20200615 && 4.0.0-dev.20200615 < 4.0.0-dev.20200800 || 4.0.x - 4.0.2 || (4.0.x - 4.0.2) || >= 1 || =1 || ~> 2.0.0 || 1.2.3 - 1.2.4 - 1.2.5 || >=1.2.3 <=1.2.4 2`] = `">x 2.x || * || <x || ~1.2.3beta ^4.0.0-dev.20200615 4.0.0-dev.20200615 <4.0.0-dev.20200800 || >=4.0.0 <=4.0.2 || (4.0.x - 4.0.2) || >=1 || =1 || ~>2.0.0 || 1.2.3 - 1.2.4 - 1.2.5 || >=1.2.3 <=1.2.4"`;

exports[`normalizeDepsValue @foo/bar@git+ssh://gitlab.com/user/foo 1`] = `
{
  "escapedName": "@foo%2fbar",
  "fetchSpec": "ssh://git@gitlab.com/user/foo.git",
  "gitCommittish": null,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@foo/bar",
  "raw": "@foo/bar@git+ssh://gitlab.com/user/foo",
  "rawSpec": "git+ssh://gitlab.com/user/foo",
  "registry": undefined,
  "saveSpec": "git+ssh://git@gitlab.com/user/foo.git",
  "scope": "@foo",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue @foo/bar@git+ssh://gitlab.com/user/foo 2`] = `"git+ssh://gitlab.com/user/foo"`;

exports[`normalizeDepsValue 0 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "0",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@0",
  "rawSpec": "0",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue 0 2`] = `"0"`;

exports[`normalizeDepsValue 1 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "1",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@1",
  "rawSpec": "1",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue 1 2`] = `"1"`;

exports[`normalizeDepsValue 1.0 && (2.0    || 3.1) 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "1.0 && (2.0    || 3.1)",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@1.0 && (2.0    || 3.1)",
  "rawSpec": "1.0 && (2.0    || 3.1)",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue 1.0 && (2.0    || 3.1) 2`] = `"1.0 (2.0 || 3.1)"`;

exports[`normalizeDepsValue 1.0 (2.0 || 3.1) 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "1.0 (2.0 || 3.1)",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@1.0 (2.0 || 3.1)",
  "rawSpec": "1.0 (2.0 || 3.1)",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue 1.0 (2.0 || 3.1) 2`] = `"1.0 (2.0 || 3.1)"`;

exports[`normalizeDepsValue empty 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "*",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@",
  "rawSpec": "*",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue empty 2`] = `"*"`;

exports[`normalizeDepsValue foo@gitlab:user/foo-js 1`] = `
{
  "escapedName": "foo",
  "fetchSpec": null,
  "gitCommittish": null,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "foo",
  "raw": "foo@gitlab:user/foo-js",
  "rawSpec": "gitlab:user/foo-js",
  "registry": undefined,
  "saveSpec": "gitlab:user/foo-js",
  "scope": undefined,
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue foo@gitlab:user/foo-js 2`] = `"gitlab:user/foo-js"`;

exports[`normalizeDepsValue git+ssh://git@gitlab.com/user/foo#1.2.3 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "ssh://git@gitlab.com/user/foo.git",
  "gitCommittish": "1.2.3",
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@git+ssh://git@gitlab.com/user/foo#1.2.3",
  "rawSpec": "git+ssh://git@gitlab.com/user/foo#1.2.3",
  "registry": undefined,
  "saveSpec": "git+ssh://git@gitlab.com/user/foo.git#1.2.3",
  "scope": "@fake",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue git+ssh://git@gitlab.com/user/foo#1.2.3 2`] = `"git+ssh://git@gitlab.com/user/foo#1.2.3"`;

exports[`normalizeDepsValue gitlab:user..blerg--/..foo-js# . . . . . some . tags / / / 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": " . . . . . some . tags / / /",
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@gitlab:user..blerg--/..foo-js# . . . . . some . tags / / /",
  "rawSpec": "gitlab:user..blerg--/..foo-js# . . . . . some . tags / / /",
  "registry": undefined,
  "saveSpec": "gitlab:user..blerg--/..foo-js# . . . . . some . tags / / /",
  "scope": "@fake",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue gitlab:user..blerg--/..foo-js# . . . . . some . tags / / / 2`] = `"gitlab:user..blerg--/..foo-js# . . . . . some . tags / / /"`;

exports[`normalizeDepsValue gitlab:user/foo-js 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": null,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@gitlab:user/foo-js",
  "rawSpec": "gitlab:user/foo-js",
  "registry": undefined,
  "saveSpec": "gitlab:user/foo-js",
  "scope": "@fake",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue gitlab:user/foo-js 2`] = `"gitlab:user/foo-js"`;

exports[`normalizeDepsValue gitlab:user/foo-js#bar/baz 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": "bar/baz",
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@gitlab:user/foo-js#bar/baz",
  "rawSpec": "gitlab:user/foo-js#bar/baz",
  "registry": undefined,
  "saveSpec": "gitlab:user/foo-js#bar/baz",
  "scope": "@fake",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue gitlab:user/foo-js#bar/baz 2`] = `"gitlab:user/foo-js#bar/baz"`;

exports[`normalizeDepsValue gitlab:user/foo-js#bar/baz/bin 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": "bar/baz/bin",
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@gitlab:user/foo-js#bar/baz/bin",
  "rawSpec": "gitlab:user/foo-js#bar/baz/bin",
  "registry": undefined,
  "saveSpec": "gitlab:user/foo-js#bar/baz/bin",
  "scope": "@fake",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue gitlab:user/foo-js#bar/baz/bin 2`] = `"gitlab:user/foo-js#bar/baz/bin"`;

exports[`normalizeDepsValue https://gitlab.com/user/foo.git 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "https://gitlab.com/user/foo.git",
  "gitCommittish": null,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@https://gitlab.com/user/foo.git",
  "rawSpec": "https://gitlab.com/user/foo.git",
  "registry": undefined,
  "saveSpec": "git+https://gitlab.com/user/foo.git",
  "scope": "@fake",
  "type": "git",
  "where": undefined,
}
`;

exports[`normalizeDepsValue https://gitlab.com/user/foo.git 2`] = `"https://gitlab.com/user/foo.git"`;

exports[`normalizeDepsValue npm:@foo/bar@1.2 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@npm:@foo/bar@1.2",
  "rawSpec": "npm:@foo/bar@1.2",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "subSpec": {
    "escapedName": "@foo%2fbar",
    "fetchSpec": "1.2",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@foo/bar",
    "raw": "@foo/bar@1.2",
    "rawSpec": "1.2",
    "registry": true,
    "saveSpec": null,
    "scope": "@foo",
    "type": "range",
    "where": undefined,
  },
  "type": "alias",
  "where": undefined,
}
`;

exports[`normalizeDepsValue npm:@foo/bar@1.2 2`] = `"npm:@foo/bar@1.2"`;

exports[`normalizeDepsValue npm:@foo/bar@next 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@npm:@foo/bar@next",
  "rawSpec": "npm:@foo/bar@next",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "subSpec": {
    "escapedName": "@foo%2fbar",
    "fetchSpec": "next",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "@foo/bar",
    "raw": "@foo/bar@next",
    "rawSpec": "next",
    "registry": true,
    "saveSpec": null,
    "scope": "@foo",
    "type": "tag",
    "where": undefined,
  },
  "type": "alias",
  "where": undefined,
}
`;

exports[`normalizeDepsValue npm:@foo/bar@next 2`] = `"npm:@foo/bar@next"`;

exports[`normalizeDepsValue npm:bar@1.2 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": null,
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@npm:bar@1.2",
  "rawSpec": "npm:bar@1.2",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "subSpec": {
    "escapedName": "bar",
    "fetchSpec": "1.2",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "bar",
    "raw": "bar@1.2",
    "rawSpec": "1.2",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
  "type": "alias",
  "where": undefined,
}
`;

exports[`normalizeDepsValue npm:bar@1.2 2`] = `"npm:bar@1.2"`;

exports[`normalizeDepsValue space 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@ ",
  "rawSpec": " ",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue space 2`] = `"*"`;

exports[`normalizeDepsValue x 1`] = `
{
  "escapedName": "@fake%2ffake",
  "fetchSpec": "x",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "@fake/fake",
  "raw": "@fake/fake@x",
  "rawSpec": "x",
  "registry": true,
  "saveSpec": null,
  "scope": "@fake",
  "type": "range",
  "where": undefined,
}
`;

exports[`normalizeDepsValue x 2`] = `"x"`;
